Sun Aug  2 16:05:16 1998  Tom Tromey  <tromey@cygnus.com>

	* Released 1.3a.

	* config.sub, config.guess, texinfo.tex: New versions from FSF.

Sun Jul 19 00:04:25 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (variable_conditions): Initialize %vars_scanned.
	(variable_conditions_sub): Check it.  Test cond5.test.

Sat Jul 18 00:24:14 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (variable_value_as_list_worker): Renamed from
	variable_value_as_list.  Set entry in vars_scanned, and give error
	if variable recursively defined.  Test recurs.test.
	(value_to_list): Call it instead.
	(variable_value_as_list): New function.

	* automake.in (variable_conditions_sub): If var is not
	conditional, but does have conditional subvariables, then return
	value should be all permutations of subvariable conditions.  Test
	cond4.test.
	(handle_source_transform): Define _OBJECTS variable with each
	condition; no need to define multiple new variables.

Fri Jul 17 12:56:14 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (am_install_var): Use DESTDIR, not DATADIR.  From
	Motoyuki Kasahara.

	* automake.in (scan_dependency_file): Recognize DOS-style paths as
	absolute.
	* ylwrap: Recognize DOS-style paths as absolute.  From Ian Lance
	Taylor.

Fri Jul 17 07:37:20 1998  H.J. Lu  (hjl@gnu.org)

	* ylwrap: Don't use absolute path if the input is in the
	current directory.

Fri Jul 17 11:58:27 1998  Ian Lance Taylor  <ian@cygnus.com>

	* automake.in: Use $(AM_MAKEFLAGS) in every invocation of $(MAKE).
  	* subdirs.am: Likewise.

Thu Jul 16 18:09:03 1998  Ian Lance Taylor  <ian@cygnus.com>

	* remake.am (config.status): Depend upon
	$(CONFIG_STATUS_DEPENDENCIES).
	* automake.in (handle_configure): Examine
	CONFIG_STATUS_DEPENDENCIES.

Tue Jul 14 13:37:48 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am: Always look in srcdir for automake.in.

Tue Jun 23 14:00:27 1998  Ian Lance Taylor  <ian@cygnus.com>

	* progs.am: Don't let $(EXEEXT) interfere with $(transform).