@@ -1035,7 +1035,7 @@ sub handle_yacc_lex_cxx
 			      . '`if test -f $(srcdir)/' . $base . '.c'
 			      . '; then echo $(srcdir)/' . $base . '.c'
 			      . '; else echo ' . $base . '.c; fi` '
-			      . '| $(ANSI2KNR) ' . $base . "_.c\n");
+			      . '| $(ANSI2KNR) > ' . $base . "_.c\n");
  	    push (@objects, $base . '_.o');
  	    push (@objects, $base . '_.lo') if $seen_libtool;
  	}
