@@ -1,0 +1,42 @@
+#! /bin/sh
+
+# Actual test of ansi2knr functionality.  Relies on existence
+# of working gcc.
+
+. $srcdir/defs || exit 1
+
+cat > configure.in << 'END'
+AC_INIT(hello.c)
+AM_INIT_AUTOMAKE(hello,0.23)
+AC_PROG_CC
+AM_C_PROTOTYPES
+AC_OUTPUT(Makefile)
+END
+
+cat > Makefile.am << 'END'
+AUTOMAKE_OPTIONS = ansi2knr
+bin_PROGRAMS = hello
+END
+
+cat > hello.c << 'END'
+#include <stdio.h>
+int
+main (int argc, char *argv[])
+{
+   printf ("yeah, yeah\n");
+   return 0;
+}
+END
+
+# Fail gracefully if no autoconf.
+(autoconf --version) > /dev/null 2>&1 || exit 0
+
+# Likewise for gcc.
+(gcc -v) > /dev/null 2>&1 || exit 0
+
+$ACLOCAL \
+   && autoconf \
+   && $AUTOMAKE -a \
+   && CC='gcc -traditional' ./configure \
+   && $MAKE ANSI2KNR=./ansi2knr U=_ \
+   && ./hello
