@@ -1,3 +1,7 @@
+Mon Aug 10 21:05:15 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* ansi3.test: New file.
+
 Sat Jul 18 00:27:26 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* recurs.test: New file.
