@@ -1,3 +1,8 @@
+Mon Aug 10 20:57:35 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (handle_yacc_lex_cxx): Redirect ansi2knr output to
+	correct file.  From Kave Ghazi.
+
 Sun Aug  2 16:05:16 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* Released 1.3a.
